[package]
name = "cose-rust-plus"
version = "0.2.0"
authors = ["Tiago Ramires"]
license = "MIT"
description = "COSE Rust implementation"
repository = "https://github.com/tramires/cose-rust"
readme = "README.md"
keywords = ["cose", "mac", "encryption", "cbor", "signature"]
categories = ["cryptography", "encoding"]
edition = "2021"

[lib]
name = "cose"

[dependencies]
cbor-codec-plus = "0.8.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
hex = { version="0.4", optional=true}
serde_json = { version="1.0", optional=true}

[dev-dependencies]
hex = "0.4"

[features]
json = ["hex", "serde_json"] 
